k8s/templates/core/test/config/enovy.yaml
admin:
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 10000 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { path_separated_prefix: "/api/helios"}
                route: { 
                  cluster: helios, 
                  prefix_rewrite: "/"
                }
              - match: { prefix: "/api/helios" } # Your WebSocket route
                route: { 
                  cluster: helios,
                  prefix_rewrite: "/graphql",
                  upgrade_configs: { upgrade_type: websocket }
                }
              - match:  
                  { path_separated_prefix: "/api/events" }
                route: {  
                  cluster: nimbus, 
                  prefix_rewrite: "/graphql"   
                }
              - match: { prefix: "/api/events" } # Your WebSocket route
                route: { 
                  cluster: nimbus,
                  prefix_rewrite: "/graphql",
                  upgrade_configs: { upgrade_type: websocket }
                }
              - match: { prefix: "/" }
                route: { cluster: helios-portal }
 
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router 
  clusters:
  - name: helios-portal
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    lb_policy: LEAST_REQUEST
    load_assignment:
      cluster_name: helios-portal
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: helios-portal
                port_value: 3000
  - name: nimbus
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    lb_policy: LEAST_REQUEST
    load_assignment:
      cluster_name: nimbus
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: nimbus
                port_value: 8080

  - name: helios
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    lb_policy: LEAST_REQUEST
    load_assignment:
      cluster_name: helios
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: helios
                port_value: 8080
